tests/syntactic/syntax8/syntax8.err
Error: syntax error, unexpected / in file syntax8.dl at line 3
    / blah
----^------
1 errors generated, evaluation aborted
